
#
# Copyright (C) 2000-2023 The Xastir Group
#

AUTOMAKE_OPTIONS = gnu dist-bzip2
ACLOCAL_AMFLAGS = -I m4

D=      `date +%G%m%d.%H%M%S`

SUBDIRS = src


#if DAVIS
#MyWX = davis
#else
#MyWX =
#endif
#noinst_PROGRAMS = $(MyWX)


# DISTCLEANFILES =

EXTRA_DIST = aclocal.m4 AUTHORS bootstrap.sh ChangeLog config.h.in \
        config.status configure.ac COPYING INSTALL NEWS \
        README bootstrap.sh

MAINTAINERCLEANFILES = configure config.status aclocal.m4 \
        Makefile.in Makefile config.guess config.sub install-sh \
        missing

ChangeLog::


