# $Id$
#
# Copyright (C) 2000-2004  The Xastir Group
#

configdir = ${pkgdatadir}/config

EXTRA_DIST = \
    language-Dutch.sys \
    language-English.sys \
    language-French.sys \
    language-German.sys \
    language-Italian.sys \
    language-Portuguese.sys \
    language-Spanish.sys \
    xastir.rgb \
    tgr2shp.dbfawk \
    tgrcty.dbfawk \
    tgrkgl.dbfawk \
    tgrlk.dbfawk \
    tgrlpt.dbfawk \
    tgrlpy.dbfawk \
    tgrplc00.dbfawk \
    tgrwat.dbfawk \
    nwsc_ddmmyy.dbfawk \
    nwsmzddmmyy.dbfawk \
    nwsozddmmyy.dbfawk \
    nwsw_ddmmyy.dbfawk \
    nwsz_ddmmyy.dbfawk \
    nwsfz_ddmmyy.dbfawk \
    tnc-startup.aea \
    tnc-startup.d700 \
    tnc-startup.kam \
    tnc-startup.kpc2 \
    tnc-startup.kpc3 \
    tnc-startup.null \
    tnc-startup.paccomm \
    tnc-startup.pico \
    tnc-startup.sys \
    tnc-startup.thd7 \
    tnc-startup.tnc2-ui \
    tnc-stop.d700 \
    tnc-stop.sys \
    tnc-stop.thd7 \
    tnc-stop.tnc2-ui

config_DATA = ${EXTRA_DIST}

