helpdir = ${prefix}/xastir/help
EXTRA_DIST = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Spanish.dat

help_DATA = \
    help-Dutch.dat \
    help-English.dat \
    help-French.dat \
    help-German.dat \
    help-Italian.dat \
    help-Spanish.dat
