#
# Copyright (C) 2000-2026 The Xastir Group
#

onlinedir=${pkgdatadir}/maps/Online
online_DATA=USTigermap.geo USTigermapBorders.geo

nationalmapdir=${pkgdatadir}/maps/Online/nationalmap.gov
nationalmap_DATA=WMS_USGS_Hydrography.geo WMS_USGS_ImageryOnly.geo \
        WMS_USGS_ImageryTopo.geo WMS_USGS_ShadedReliefOnly.geo \
        WMS_USGS_Topo.geo

nwsradarmapdir=${pkgdatadir}/maps/Online/NWS
nwsradarmap_DATA=NWSRadar_Alaska_CompositeRef.geo \
                 NWSRadar_Hawaii_CompositeRef.geo \
                 NWSRadar_CONUS_CompositeRef.geo

geogratismapdir=${pkgdatadir}/maps/Online/geogratis.gc.ca
geogratismap_DATA=National.geo Regional.geo Sub_national.geo Sub_regional.geo
